compiler/testData/diagnostics/tests/secondaryConstructors/constructorInTrait.kt
// FIR_IDENTICAL
interface A {
    <!CONSTRUCTOR_IN_INTERFACE!>constructor()<!>
}